Enum StatutEquipement{
    "Actif"
    "Abandonné"
    "Standby"
    "Arrêt Maintenance"
    "Réglage"
    "Démarrage"
    "En test"
}

Enum StatutOT{
    "Ouvert"
    "Approuve"
    "Lance"
    "En_attente_piece"
    "En_attente_permis"
    "Planifie"
    "En_cours"
    "Travaux_acheve"
    "En_attente_controle"
    "A_valider"
    "Cloture"
}

Enum statutDi{
    "En_attente"
    "Refuse"
    "Accepte"
}

Enum SatatutIntervention{
    "Planifié"
    "En cours"
    "Réalisé"
}

Enum StatutOutillage{
    "Utilise"
    "En stock"
}

Table OrdreTravail{
    ot_id UUID [primary key]
    identification text [Unique]
    responsable text
    description text
    equipement_id text
    operation_id text
    date_demande date
    date_souhaite date
    satut SatutOT
}

Table DemandeIntervention{
    id_di UUID [primary key]
    description text
    date_souhaite date
    equipement_id UUUID
    statut statutDi
}

Table Equipement{
    equipement_id UUID [primary key]
    reference text [Unique]
    nom text
    categorie text
    sous_equipement_id UUID
    fiche_technique text
    fabricant text
    etat EtatMachine
    compteur int
    date_service date
    criticité text
}

Table Intervention{
    intervention_id UUID [primary key]
    reference text
    description text
    date_intervention date
    machine_id UUID 
    dure int
    outils int
    executant text
    statut StatutEuipement
}

Table Personnel{
    personnel_id UUID [primary key]
    matricule text [Unique]
    nom text 
    prenom text
    num_securite_social int 
    competences text
}

Table Operation{
    operation_id UUID [primary key]
    description text
    sous_operation UUID
    personnel_id UUID
    outillage_id UUID
    date_intervention date
    date_fin_prevue date
}

Table Outillage{
    outillage_id UUID [primary key]
    nom text
    statut StatutOutillage
}

Ref: OrdreTravail.equipement_id < Equipement.equipement_id
Ref: OrdreTravail.operation_id < Operation.operation_id

Ref: Operation.personnel_id < Personnel.personnel_id
Ref: Operation.outillage_id < Outillage.outillage_id

Ref: Operation.sous_operation < Operation.operation_id
